<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.suanla.ziwei.MainActivity">

        <TextView
            android:textSize="20dp"
            android:text="@string/client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:hint="@string/clientName"
            android:layout_gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20dp"

            android:text="@string/birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:focusable="false"
            android:id="@+id/edit_date"
            android:hint="@string/edit_date"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/birthtime"
            android:textSize="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:focusable="false"
            android:id="@+id/edit_time"
            android:hint="@string/edit_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_calulate"
            android:text="@string/btn_calulate"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitDate" />

</LinearLayout>


